fix overflow

--- a/css/snooshle.user.css
+++ b/css/snooshle.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Googlesha
 @namespace      google.com/openstyles/stylus
-@version        1.0.0
+@version        1.0.1
 @description    A new userstyle
 @author         Snesh
 @preprocessor	less
@@ -837,10 +837,10 @@ g-inner-card{
 }
 
 
-/*ANCHOR [FIX MODALS] */
+/*ANCHOR [FIXES] */
 
 
-
+body{overflow-x: hidden !important;}
 
 /* Note: T4LgNb is the problem position: relative; 
 
